@@ -4,6 +4,7 @@ Made for Jython.
 """
 import types
 import unittest
+from java.lang import Object
 from test import test_support
 
 xyz = 123
@@ -48,9 +49,25 @@ class MethodHashCodeTestCase(unittest.TestCase):
         self.assertNotEqual(hash(foo.bar), hash(Foo().bar))
 
 
+class SingleMethodInterfaceTestCase(unittest.TestCase):
+
+    def test_java_lang_object_methods(self):
+        # Passing a PyFunction to Object.toString, .hashCode, etc
+        # should not result in the function itself being called
+        
+        def return42():
+            return 42
+        s = Object.toString(return42)
+        self.assertNotEqual(s, 42)
+        self.assert_(s.startswith('<function return42'))
+        
+        
+
+
 def test_main():
     test_support.run_unittest(FunctionTypeTestCase,
-                              MethodHashCodeTestCase)
+                              MethodHashCodeTestCase,
+                              SingleMethodInterfaceTestCase)
 
 if __name__ == '__main__':
     test_main()
